Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/Interview__c.object
<CustomObject>
    <fields>
        <fullName>Candidate__c</fullName>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Interviews</relationshipLabel>
        <relationshipName>Interviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <description>Provide feedback on candidate</description>
        <inlineHelpText>Provide feedback</inlineHelpText>
        <label>Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview_Time__c</fullName>
        <label>Interview Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Interviews</relationshipLabel>
        <relationshipName>Interviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Interviews</relationshipLabel>
        <relationshipName>Interviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>Interviews</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Scheduled_Window__c</fullName>
        <label>Scheduled Window</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Interview</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Candidate__c</columns>
        <columns>Position__c</columns>
        <columns>Scheduled_Window__c</columns>
        <columns>Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Interview-{0000}</displayFormat>
        <label>Interview Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>